# Text2Sql_AgenticAI

./: README.md  requirements.txt
Crewai/: README.md  pyproject.toml
Crewai/src/text2sql/: crew.py  main.py
Crewai/src/text2sql/config/: agents.yaml  tasks.yaml
Crewai/src/text2sql/knowledge/: knowledgebase.txt
Crewai/src/text2sql/tools/: custom_tool.py
langgraph/: sql_agent.ipynb
llamaindex/: sql_agent_with_memory.py
